fix: shrunk slider for even vertical alignment.

--- a/src/popup/styles/Switch.css
+++ b/src/popup/styles/Switch.css
@@ -22,8 +22,8 @@
   content: "";
   position: absolute;
   left: 2px;
-  width: 13px;
-  height: 13px;
+  width: 12px;
+  height: 12px;
   border-radius: 14px;
   transition: 0.3s;
   background-color: #d6d8dc;
